package com.canbankx.payment.model.enums;

public enum TransactionType {
    CREDIT,
    DEBIT,
    TRANSFER
}
